2009-06-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c (parse_type): Check array shape.

2009-06-05  Robert Jordan  <robertj@gmx.net>

	* class.c (mono_class_create_from_typedef): Check only for
	mscorlib's System.Array.

2009-06-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c (parse_type): Check pointer, class/valuetype
	and generic params. 

	* metadata-verify.c (parse_field): Check the signature.

2009-06-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c: Implement locals signature check.

2009-06-04  Marek Safar  <marek.safar@gmail.com>

	* domain.c: Add .NET 4.0 Beta 1 version.

2009-06-04  Bill Holmes  <billholmes54@gmail.com>

	* cominterop.c (cominterop_ccw_queryinterface): Fix for bug 499566.
	  For QueryInterface on CCWs consider the base class
	  interfaces as well.

	Code is contributed under MIT/X11 license.

2009-06-04  Zoltan Varga  <vargaz@gmail.com>

	* wrapper-types.h: Delete STATIC_RGCTX_INVOKE.

	* marshal.c (mono_marshal_ret_static_rgctx_invoke): Remove, no longer
	used.

	* icall.c (ves_icall_System_Delegate_CreateDelegate_internal): Avoid
	adding a static-rgctx invoke wrapper, it is done by the runtime trampolines.

	* generic-sharing.c (inflate_other_data): Ditto.
	
2009-06-03 Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c: Implement property signature check.

2009-06-04  Mark Probst  <mark.probst@gmail.com>

	* sgen-gc.h: Register saving support for PPC.

2009-06-04  Mark Probst  <mark.probst@gmail.com>

	* sgen-gc.c: Fixed a pthread TLS screwup.

2009-06-04  Mark Probst  <mark.probst@gmail.com>

	* sgen-gc.c: Do TLS using pthread API if __thread keyword is not
	supported.

2009-06-04  Mark Probst  <mark.probst@gmail.com>

	* sgen-gc.c: Disable TLA and managed allocation if the __thread
	keyword is not supported.

2009-06-04  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c metadata.c: Applied patch from Ulrich Weigand 